[tool.poetry]
name = "botcanvas"
version = "0.1.0"
description = "bot para canvas academico"
authors = ["andypoquis <andrespoquis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
anyio = "4.2.0"
certifi = "2023.11.17"
exceptiongroup = "1.2.0"
h11 = "0.14.0"
httpcore = "1.0.2"
httpx = "0.25.2"
idna = "3.6"
python-dotenv = "1.0.1"
python-telegram-bot = "20.7"
requests = "2.31.0"
sniffio = "1.3.0"
typing-extensions = "4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
